--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="search-container" class="search-bar-container active">
+    <div id="search-container" class="search-bar-container">
        <img class="magnifier" src="https://cdn1.iconfinder.com/data/icons/jumpicon-basic-ui-glyph-1/32/-_Magnifier-Search-Zoom--512.png" alt="magnifier">
-       <input type="text" class="input" placeholder="Search...">
+       <input type="text" id="input" class="input" placeholder="Search...">
        <img class="microphone" src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-25-512.png" alt="microphone">
     </div>
     <script src="index.js"></script>
 </body>
-</html>=
+</html>
